add push example to the array

--- a/23-arrayPropertiesAndMethods.html
+++ b/23-arrayPropertiesAndMethods.html
@@ -55,6 +55,11 @@
             var officeFurnitureLastElement = officeFurniture.length - 1;
             document.write(officeFurniture[officeFurnitureLastElement] + '<br>');
 
+            officeFurniture.push("whiteboard");
+            document.write(officeFurniture.length + '<br>');
+            var officeFurnitureLastElement = officeFurniture.length - 1;
+            document.write(officeFurniture[officeFurnitureLastElement] + '<br>');
+
 
         </script>
 
