link to all math methods

--- a/24-mathObjects.html
+++ b/24-mathObjects.html
@@ -55,6 +55,9 @@
             var randomNumber = Math.ceil(Math.random() * maxNumber);
             document.write('Your random number is ' +  randomNumber + '<br>');
 
+            // For a full list of math methods
+            // http://www.w3schools.com/jsref/jsref_obj_math.asp
+
         </script>
 
     </body>
