add link to all date object methods

--- a/25-dateObject.html
+++ b/25-dateObject.html
@@ -30,6 +30,9 @@
             //document.write(fullDate + '<br>');
             setInterval('printTime()', 1000);
 
+            // All the date object methods
+            // http://www.w3schools.com/jsref/jsref_obj_date.asp
+
 
         </script>
 
