Played around with some of the examples!

--- a/01-helloWorld.html
+++ b/01-helloWorld.html
@@ -18,7 +18,7 @@
             */
 
             <!--
-                document.write("Hello world!");
+                document.write("Hello burgers!");
             // -->
         </script>
     </body>
