--- a/03-variables.html
+++ b/03-variables.html
@@ -21,7 +21,7 @@
             */
 
             var myNumber = 100;
-            document .write(myNumber);
+            document .write(myNumber*2);
 
             /*
                 Variables are case sensitive
