--- a/04-variableTypes.html
+++ b/04-variableTypes.html
@@ -41,6 +41,7 @@
             var age = 40;
             document.write(name + ' is my name, and I am ' + age + ' years old');
 
+            document.write(integer + floatingPoint + negativeNumber + string + name + age);
         </script>
     </body>
 </html>
