--- a/11-ifElseConditions.html
+++ b/11-ifElseConditions.html
@@ -9,8 +9,9 @@
         <script type="text/javascript">
             // Fun with if/else and comparison operators
 
-            var apple = 20;
-            var orange = 20;
+            // Added in the prompt to play around with how that works
+            var apple = prompt("How many apples do you have?", "");
+            var orange = prompt("How many oranges do you have?","");
             var space = '</br>';
 
             // when comparing use `==` is equal to
