--- a/13-switchStatements.html
+++ b/13-switchStatements.html
@@ -9,7 +9,7 @@
         <script type="text/javascript">
             // Switch statements - like If but better
 
-            var name = 'Zoe';
+            var name = 'Zenna';
 
             switch(name) {
                 case 'Jenn':
