--- a/19-customObjectsAndFunctions.html
+++ b/19-customObjectsAndFunctions.html
@@ -28,6 +28,12 @@
             document.write("You are " + father.name + " and your age is " + father.age + "<br/>");
             document.write("You are " + daughter.name + " and your age is " + daughter.age + "<br/>");
 
+            // Older or Younger
+            if (father.age > daughter.age) {
+                document.write(father.name + " is older than " + daughter.name);
+            } else {
+                document.write(daughter.name + " is older than " + father.name); 
+            }
         </script>
 
     </body>
