--- a/26-forms.html
+++ b/26-forms.html
@@ -7,9 +7,9 @@
     <script type="text/javascript">
         var checkForm = function() {
             if (document.myForm.theBox.checked) {
-                alert('You Win!');
+                alert('You just activated the missle launch!?!');
             } else {
-                alert('Oops!');
+                alert('Missle launch delayed!');
             }
         }
     </script>
