license and code update

--- a/20-objectInitializers.html
+++ b/20-objectInitializers.html
@@ -8,8 +8,8 @@
 
             // Working with object initializers - shorthand for creating small scale instance objects
 
-            father = {name: 'Dale Sande', age: 40};
-            daughter = {name: 'Zoe Sande', age: 7};
+            father = {name: 'Harrison Ford', age: 71};
+            daughter = {name: 'Calista Flockhart', age: 48};
 
         </script>
     </head>
