--- a/22-arrays.html
+++ b/22-arrays.html
@@ -18,8 +18,8 @@
                 Remember to comma delineate each value in the array
             */
 
-            var names = ["Dale", "Jennifer", "Zoe", "Zenna"];
-            var ages = [40, 40, 7, 3]
+            var names = ["Fred", "Amy", "Bert", "Mary-Ann"];
+            var ages = [66, 28, 7, 3]
 
             document.write(names[1] + ' ' + ages[1]);
 
