Prefer links to MDN over w3schools.

--- a/23-arrayPropertiesAndMethods.html
+++ b/23-arrayPropertiesAndMethods.html
@@ -33,8 +33,12 @@
             document.write(transportation.length + '<br>');
             document.write(transportation[5] + '<br>');
 
-            // See all properties and methods or an array
-            // http://www.w3schools.com/jsref/jsref_obj_array.asp
+            /*
+                See all properties and methods or an array
+                https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array
+                and
+                https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/prototype#Methods
+            */
 
             // The join method - converts an array to a string
 
